@@ -1,7 +1,15 @@
 
 === 4.0.0 (unreleased) ===
+<<<<<<< HEAD
 * Backported from develop-4: Upgrade Gulp and NodeJs
 * Backported from develop-4: feat: Re-enable showing the toolbar to anonymous users
+* Backported from develop-4: feat: Added live-url querystring parameter option for PageContent edit and
+  preview endpoints.
+* Backported from develop: Upgrade Gulp and NodeJs
+* feat: Re-enable showing the toolbar to anonymous users
+* Backport django 3.2 support
+* Backport django 3.1 support
+* Backport django 3.0 support
 * Allow Pagecontent.limit_visibility_in_menu to be reset once it has been set
 * Backported from develop: Added support for Github Actions based CI.
 * Backported from develop: Added Support for testing frontend, docs, test and linting in different/parallel CI pipelines.
